<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">


    <ImageButton
        android:id="@+id/back_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search_area_constraint_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription">

    </ImageButton>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_area_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="16sp"
        android:layout_marginStart="16sp"
        android:background="@color/secondary_accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_image_button"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/search_edit_textview"
            style="@style/Style.Body.1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/search_view_hint"
            android:inputType="text"
            android:lines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/clear_image_button"
            app:layout_constraintStart_toEndOf="@+id/search_icon_imageview"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />

        <ImageButton
            android:id="@+id/clear_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_close_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/search_edit_textview"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/search_icon_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/search_edit_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</merge>
